--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       </div>
     </div>
 
-    <!-- Lado Direito -->
-    <div class="w-full md:w-1/2 bg-[#3B82F6] flex flex-col items-center justify-center relative p-6 md:p-8">
+    <!-- Lado Direito (visível apenas em telas md ou maiores) -->
+    <div class="hidden md:flex w-full md:w-1/2 bg-[#3B82F6] flex-col items-center justify-center relative p-6 md:p-8">
       <div class="absolute top-4 right-4 text-white text-sm font-bold">SIGAT</div>
       <div class="flex flex-col items-center justify-center">
         <img src="Logo nome.png" alt="Imagem" class="w-3/4 max-w-xs md:max-w-md" />
