--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     }
   </style>
 </head>
-<body class="bg-[#3B82F6]">
-  <div class="flex flex-col md:flex-row w-full h-full">
+<body class="bg-white">
+  <div class="flex flex-col md:flex-row w-full h-screen">
     <!-- Lado Esquerdo -->
-    <div class="w-full md:w-1/2 bg-white flex flex-col items-center justify-center p-6 md:p-8">
+    <div class="w-full h-full md:w-1/2 bg-white flex flex-col items-center justify-center p-6 md:p-8">
       <h1 class="text-3xl md:text-4xl font-bold text-[#07005a] mb-6 md:mb-8">BEM-VINDO</h1>
       <div class="bg-[#3B82F6] p-6 md:p-12 rounded-lg w-full max-w-md shadow-lg">
         <div class="flex justify-center mb-6">
@@ -40,7 +40,7 @@
     </div>
 
     <!-- Lado Direito (visível apenas em telas md ou maiores) -->
-    <div class="hidden md:flex w-full md:w-1/2 bg-[#3B82F6] flex-col items-center justify-center relative p-6 md:p-8">
+    <div class="hidden md:flex w-1/2 h-full bg-[#3B82F6] flex-col items-center justify-center relative p-6">
       <div class="absolute top-4 right-4 text-white text-sm font-bold">SIGAT</div>
       <div class="flex flex-col items-center justify-center">
         <img src="Logo nome.png" alt="Imagem" class="w-3/4 max-w-xs md:max-w-md" />
