--- a/saidaaparelho.html
+++ b/saidaaparelho.html
@@ -4,13 +4,49 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <title>Dashboard</title>
   <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="shortcut icon" href="favicongrow.png" type="image/x-icon">
+  <link rel="shortcut icon" href="favicongrow.png" type="image/x-icon">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
+  <style>
+    /* Custom styles para esconder sidebar no celular e mostrar botão */
+    @media (max-width: 767px) {
+      #sidebar {
+        position: fixed;
+        top: 0;
+        left: -100%;
+        height: 100%;
+        width: 70%;
+        max-width: 250px;
+        z-index: 50;
+        transition: left 0.3s ease-in-out;
+      }
+      #sidebar.open {
+        left: 0;
+      }
+      #overlay {
+        display: none;
+        position: fixed;
+        inset: 0;
+        background: rgba(0,0,0,0.5);
+        z-index: 40;
+      }
+      #overlay.show {
+        display: block;
+      }
+    }
+  </style>
  </head>
  <body class="bg-white">
-  <div class="flex flex-col md:flex-row min-h-screen">
+  <div class="flex min-h-screen">
+    <!-- Botão menu mobile -->
+    <button id="menuBtn" class="md:hidden fixed top-4 left-4 z-60 bg-blue-500 text-white p-3 rounded-md shadow-md focus:outline-none">
+      <i class="fas fa-bars text-lg"></i>
+    </button>
+
+    <!-- Overlay para fechar menu -->
+    <div id="overlay" class="hidden"></div>
+
     <!-- Sidebar -->
-<div id="sidebar" class="w-full md:w-1/6 bg-blue-500 p-4 flex flex-col min-h-screen">
+    <div id="sidebar" class="w-64 bg-blue-500 p-4 flex flex-col min-h-screen md:static md:w-1/6">
       <h2 class="text-white text-xl font-semibold mb-6 border-b border-blue-400 pb-2">Menu Principal</h2>
       <nav class="flex flex-col space-y-3 flex-grow">
         <a href="paginaprincipal.html" class="bg-blue-400 hover:bg-blue-600 text-white py-2 rounded-md flex items-center px-3">
@@ -60,25 +96,26 @@
         </a>
       </nav>
     </div>
+
    <!-- Main Content -->
-   <div class="w-full md:w-5/6 p-4">
-    <div class="flex justify-between items-center mb-4">
+   <div class="flex-1 p-4 md:w-5/6 overflow-auto">
+    <div class="flex justify-between items-center mb-4 flex-wrap gap-3">
       <img alt="Logo" class="h-10" src="logoprincipal.png"/>
-     <div class="flex items-center space-x-4">
-      <i class="fas fa-bell text-blue-500 text-2xl"></i>
-      <div id="userMenu" class="relative cursor-pointer">
-        <i class="fas fa-user-circle text-blue-500 text-2xl"></i>
-        <div id="userSubmenu" class="hidden absolute right-0 mt-2 w-48 bg-white border border-gray-300 rounded-md shadow-lg z-50">
-          <a href="usuarios.html" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Editar Perfil</a>
-          <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Chamar Suporte</a>
+      <div class="flex items-center space-x-4">
+        <i class="fas fa-bell text-blue-500 text-2xl"></i>
+        <div id="userMenu" class="relative cursor-pointer">
+          <i class="fas fa-user-circle text-blue-500 text-2xl"></i>
+          <div id="userSubmenu" class="hidden absolute right-0 mt-2 w-48 bg-white border border-gray-300 rounded-md shadow-lg z-50">
+            <a href="usuarios.html" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Editar Perfil</a>
+            <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Chamar Suporte</a>
+          </div>
         </div>
       </div>
-     </div>
     </div>
 
     <!-- Botão para abrir modal de entrada -->
     <div class="mb-4">
-      <button id="openEntradaModalBtn" class="bg-green-500 text-white py-2 px-4 rounded-md hover:bg-green-600 transition">
+      <button id="openEntradaModalBtn" class="bg-green-500 text-white py-2 px-4 rounded-md hover:bg-green-600 transition w-full sm:w-auto">
         <i class="fas fa-sign-in-alt"></i> Cadastrar Entrada
       </button>
     </div>
@@ -87,8 +124,8 @@
     <div id="cardsContainer" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 mb-6"></div>
 
     <!-- Modal de Registrar Entrada -->
-    <div id="entradaModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden">
-     <div class="bg-white rounded-lg p-6 w-full max-w-md">
+    <div id="entradaModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden p-4 overflow-auto">
+     <div class="bg-white rounded-lg p-6 w-full max-w-md max-h-full overflow-auto">
       <h2 class="text-green-500 text-xl font-bold mb-4">Cadastrar Entrada</h2>
       <form id="entradaForm" class="space-y-4">
        <div>
@@ -111,17 +148,17 @@
         <label for="dataHora" class="block font-semibold mb-1">Data e Hora:</label>
         <input type="datetime-local" id="dataHora" name="dataHora" class="w-full border border-gray-300 rounded-md p-2" required />
        </div>
-       <div class="flex justify-end space-x-2">
-        <button type="button" id="closeEntradaModalBtn" class="bg-gray-300 text-gray-700 py-2 px-4 rounded-md hover:bg-gray-400 transition">Cancelar</button>
-        <button type="submit" class="bg-green-500 text-white py-2 px-4 rounded-md hover:bg-green-600 transition">Cadastrar</button>
+       <div class="flex justify-end space-x-2 flex-wrap">
+        <button type="button" id="closeEntradaModalBtn" class="bg-gray-300 text-gray-700 py-2 px-4 rounded-md hover:bg-gray-400 transition w-full sm:w-auto">Cancelar</button>
+        <button type="submit" class="bg-green-500 text-white py-2 px-4 rounded-md hover:bg-green-600 transition w-full sm:w-auto">Cadastrar</button>
        </div>
       </form>
      </div>
     </div>
     
     <!-- Modal de Registrar Saída -->
-    <div id="saidaModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden">
-     <div class="bg-white rounded-lg p-6 w-full max-w-md">
+    <div id="saidaModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden p-4 overflow-auto">
+     <div class="bg-white rounded-lg p-6 w-full max-w-md max-h-full overflow-auto">
       <h2 class="text-blue-500 text-xl font-bold mb-4">Registrar Saída</h2>
       <form id="saidaForm" class="space-y-4">
        <div>
@@ -144,9 +181,9 @@
         <label for="dataHoraSaida" class="block font-semibold mb-1">Data e Hora:</label>
         <input type="datetime-local" id="dataHoraSaida" name="dataHoraSaida" class="w-full border border-gray-300 rounded-md p-2" required />
        </div>
-       <div class="flex justify-end space-x-2">
-        <button type="button" id="closeSaidaModalBtn" class="bg-gray-300 text-gray-700 py-2 px-4 rounded-md hover:bg-gray-400 transition">Cancelar</button>
-        <button type="submit" class="bg-blue-500 text-white py-2 px-4 rounded-md hover:bg-blue-600 transition">Registrar</button>
+       <div class="flex justify-end space-x-2 flex-wrap">
+        <button type="button" id="closeSaidaModalBtn" class="bg-gray-300 text-gray-700 py-2 px-4 rounded-md hover:bg-gray-400 transition w-full sm:w-auto">Cancelar</button>
+        <button type="submit" class="bg-blue-500 text-white py-2 px-4 rounded-md hover:bg-blue-600 transition w-full sm:w-auto">Registrar</button>
        </div>
       </form>
      </div>
@@ -169,178 +206,175 @@
       storageBucket: "e-celldb.firebasestorage.app",
       messagingSenderId: "688765189903",
       appId: "688765189903:web:ad9823502230d7717c487a",
-      measurementId: "G-1QM85D48BH"
+      measurementId: "G-ZMW3M66C5S"
     };
-  
+
     // Initialize Firebase
-    const app = firebase.initializeApp(firebaseConfig);
+    firebase.initializeApp(firebaseConfig);
     const database = firebase.database();
-  
-    // References
-    const aparelhosRef = database.ref('aparelhos');
-    const saidasRef = database.ref('saidas');
-    const cardsContainer = document.getElementById('cardsContainer');
-    const saidaModal = document.getElementById('saidaModal');
-    const closeSaidaModalBtn = document.getElementById('closeSaidaModalBtn');
-    const saidaForm = document.getElementById('saidaForm');
-    let currentKey = null;
-  
-    // Abrir modal de saída
-    function openSaidaModal(key) {
-      currentKey = key;
-      saidaModal.classList.remove('hidden');
+
+    // Referência para o caminho 'entrada'
+    const entradaRef = database.ref("entrada");
+
+    // Função para criar o card de cada entrada
+    function createCard(key, data) {
+      const card = document.createElement("div");
+      card.className = "bg-white rounded-lg shadow p-4 cursor-pointer hover:shadow-lg flex flex-col";
+
+      card.innerHTML = `
+        <h3 class="text-lg font-semibold text-blue-600 mb-1">${data.modelo}</h3>
+        <p><span class="font-semibold">Problema:</span> ${data.problema}</p>
+        <p><span class="font-semibold">Cliente:</span> ${data.cliente}</p>
+        <p><span class="font-semibold">Data/Hora:</span> ${new Date(data.dataHora).toLocaleString()}</p>
+        <p><span class="font-semibold">Responsável:</span> ${data.responsavelEntrada}</p>
+      `;
+
+      // Ao clicar no card, abre modal de saída preenchido
+      card.addEventListener("click", () => {
+        abrirModalSaida(key, data);
+      });
+
+      return card;
     }
-  
-    // Fechar modal de saída
-    closeSaidaModalBtn.addEventListener('click', () => {
-      saidaModal.classList.add('hidden');
-      currentKey = null;
-    });
-  
-    // Registrar saída no banco de dados
-    saidaForm.addEventListener('submit', (e) => {
-      e.preventDefault();
-  
-      const pecas = document.getElementById('pecas').value;
-      const conserto = document.getElementById('conserto').value;
-      const anotacoes = document.getElementById('anotacoes').value;
-      const responsavelSaida = document.getElementById('responsavelSaida').value;
-      const dataHoraSaida = document.getElementById('dataHoraSaida').value;
-  
-      const saidaData = {
-        pecas,
-        conserto,
-        anotacoes,
-        responsavelSaida,
-        dataHoraSaida
-      };
-  
-      if (currentKey) {
-        // Obter os dados do aparelho atual
-        aparelhosRef.child(currentKey).once('value', (snapshot) => {
-          const aparelhoData = snapshot.val();
-  
-          // Enviar os dados para o banco de saídas
-          saidasRef.push({ ...aparelhoData, ...saidaData })
-            .then(() => {
-              // Excluir o registro do banco de aparelhos
-              return aparelhosRef.child(currentKey).remove();
-            })
-            .then(() => {
-              alert('Saída registrada com sucesso!');
-              saidaForm.reset();
-              saidaModal.classList.add('hidden');
-              currentKey = null;
-            })
-            .catch((error) => {
-              alert('Erro ao registrar saída: ' + error.message);
-            });
-        });
+
+    // Atualizar lista de cards
+    function updateCards(data) {
+      const container = document.getElementById("cardsContainer");
+      container.innerHTML = "";
+      for (const key in data) {
+        const card = createCard(key, data[key]);
+        container.appendChild(card);
       }
-    });
-  
-    // Exibir cards dinâmicos
-    aparelhosRef.on('value', (snapshot) => {
-      cardsContainer.innerHTML = '';
-      const aparelhos = snapshot.val();
-      if (aparelhos) {
-        Object.entries(aparelhos).forEach(([key, aparelho]) => {
-          const card = document.createElement('div');
-          card.className = 'bg-white rounded-lg shadow p-4 border border-gray-200';
-  
-          card.innerHTML = `
-            <h3 class="text-lg font-semibold mb-2">${aparelho.modelo || 'Modelo não informado'}</h3>
-            <p><strong>Problema:</strong> ${aparelho.problema || 'Não informado'}</p>
-            <p><strong>Cliente:</strong> ${aparelho.cliente || 'Não informado'}</p>
-            <p><strong>Data e Hora:</strong> ${aparelho.dataHora || 'Não informado'}</p>
-          `;
-          cardsContainer.appendChild(card);
-        });
+    }
+
+    // Ouvir mudanças na entrada
+    entradaRef.on("value", (snapshot) => {
+      const data = snapshot.val();
+      if (data) {
+        updateCards(data);
+      } else {
+        document.getElementById("cardsContainer").innerHTML = "<p class='text-gray-500'>Nenhuma entrada cadastrada.</p>";
       }
     });
 
-    // Abrir modal de entrada
-    const entradaModal = document.getElementById('entradaModal');
-    const openEntradaModalBtn = document.getElementById('openEntradaModalBtn');
-    const closeEntradaModalBtn = document.getElementById('closeEntradaModalBtn');
-    const entradaForm = document.getElementById('entradaForm');
+    // Modal entrada
+    const entradaModal = document.getElementById("entradaModal");
+    const openEntradaModalBtn = document.getElementById("openEntradaModalBtn");
+    const closeEntradaModalBtn = document.getElementById("closeEntradaModalBtn");
+    const entradaForm = document.getElementById("entradaForm");
 
-    openEntradaModalBtn.addEventListener('click', () => {
-      entradaModal.classList.remove('hidden');
+    openEntradaModalBtn.addEventListener("click", () => {
+      entradaModal.classList.remove("hidden");
     });
 
-    closeEntradaModalBtn.addEventListener('click', () => {
-      entradaModal.classList.add('hidden');
+    closeEntradaModalBtn.addEventListener("click", () => {
+      entradaModal.classList.add("hidden");
       entradaForm.reset();
     });
 
-    // Registrar entrada no banco de dados
-    entradaForm.addEventListener('submit', (e) => {
+    entradaForm.addEventListener("submit", (e) => {
       e.preventDefault();
 
-      const modelo = document.getElementById('modelo').value;
-      const problema = document.getElementById('problema').value;
-      const cliente = document.getElementById('cliente').value;
-      const responsavelEntrada = document.getElementById('responsavelEntrada').value;
-      const dataHora = document.getElementById('dataHora').value;
-
-      const entradaData = {
-        modelo,
-        problema,
-        cliente,
-        responsavelEntrada,
-        dataHora
+      const novaEntrada = {
+        modelo: entradaForm.modelo.value,
+        problema: entradaForm.problema.value,
+        cliente: entradaForm.cliente.value,
+        responsavelEntrada: entradaForm.responsavelEntrada.value,
+        dataHora: entradaForm.dataHora.value,
       };
 
-      // Salvar os dados no banco de dados
-      aparelhosRef.push(entradaData)
+      entradaRef.push(novaEntrada)
         .then(() => {
-          alert('Entrada cadastrada com sucesso!');
+          alert("Entrada cadastrada com sucesso!");
+          entradaModal.classList.add("hidden");
           entradaForm.reset();
-          entradaModal.classList.add('hidden');
         })
         .catch((error) => {
-          alert('Erro ao cadastrar entrada: ' + error.message);
+          alert("Erro ao cadastrar entrada: " + error.message);
         });
     });
 
-    // Notification popup for new saida entries
-    const notificationSound = new Audio('notification.mp3');
-    const notifiedSaidas = new Set(JSON.parse(localStorage.getItem('notifiedSaidas') || '[]'));
+    // Modal saída
+    const saidaModal = document.getElementById("saidaModal");
+    const closeSaidaModalBtn = document.getElementById("closeSaidaModalBtn");
+    const saidaForm = document.getElementById("saidaForm");
 
-    saidasRef.on('child_added', (snapshot) => {
-      const key = snapshot.key;
-      if (!notifiedSaidas.has(key)) {
-        notifiedSaidas.add(key);
-        localStorage.setItem('notifiedSaidas', JSON.stringify(Array.from(notifiedSaidas)));
-        const saida = snapshot.val();
-        if (saida) showPopup(saida.modelo || 'Modelo não informado');
-      }
-    });
+    // Função para abrir modal saída preenchendo campos
+    function abrirModalSaida(key, entradaData) {
+      saidaModal.classList.remove("hidden");
+      saidaForm.dataset.key = key;
 
-    function showPopup(modelo) {
-      const popup = document.createElement('div');
-      popup.className = 'fixed top-16 right-4 bg-blue-500 text-white p-4 rounded-lg shadow-lg flex items-center space-x-2';
-      popup.innerHTML = `<i class="fas fa-info-circle text-xl"></i><span>Nova saída registrada: ${modelo}</span>`;
-      document.body.appendChild(popup);
-      notificationSound.play();
-      setTimeout(() => popup.remove(), 5000);
+      // Preenche alguns campos (responsável e data atual)
+      saidaForm.responsavelSaida.value = entradaData.responsavelEntrada || "";
+      saidaForm.dataHoraSaida.value = new Date().toISOString().slice(0,16); // yyyy-mm-ddThh:mm
+      saidaForm.pecas.value = "";
+      saidaForm.conserto.value = "";
+      saidaForm.anotacoes.value = "";
     }
-  </script>
 
-  <script>
-    // Toggle user submenu visibility on click
-    document.getElementById('userMenu').addEventListener('click', function(event) {
-      event.stopPropagation();
-      const submenu = document.getElementById('userSubmenu');
-      submenu.classList.toggle('hidden');
+    closeSaidaModalBtn.addEventListener("click", () => {
+      saidaModal.classList.add("hidden");
+      saidaForm.reset();
     });
 
-    // Hide submenu if clicking outside
-    document.addEventListener('click', function() {
-      const submenu = document.getElementById('userSubmenu');
-      if (!submenu.classList.contains('hidden')) {
-        submenu.classList.add('hidden');
+    // Quando enviar o formulário de saída
+    saidaForm.addEventListener("submit", (e) => {
+      e.preventDefault();
+      const key = saidaForm.dataset.key;
+      if (!key) {
+        alert("Erro: chave de entrada não encontrada.");
+        return;
+      }
+
+      const saidaData = {
+        pecas: saidaForm.pecas.value,
+        conserto: saidaForm.conserto.value,
+        anotacoes: saidaForm.anotacoes.value,
+        responsavelSaida: saidaForm.responsavelSaida.value,
+        dataHoraSaida: saidaForm.dataHoraSaida.value,
+      };
+
+      // Salva saída no banco, por exemplo em 'saida/{key}'
+      database.ref("saida/" + key).set(saidaData)
+        .then(() => {
+          alert("Saída registrada com sucesso!");
+          saidaModal.classList.add("hidden");
+          saidaForm.reset();
+
+          // Remove a entrada que foi concluída
+          entradaRef.child(key).remove();
+        })
+        .catch((error) => {
+          alert("Erro ao registrar saída: " + error.message);
+        });
+    });
+
+    // Sidebar mobile toggle
+    const sidebar = document.getElementById("sidebar");
+    const overlay = document.getElementById("overlay");
+    const menuBtn = document.getElementById("menuBtn");
+
+    menuBtn.addEventListener("click", () => {
+      sidebar.classList.toggle("open");
+      overlay.classList.toggle("show");
+    });
+
+    overlay.addEventListener("click", () => {
+      sidebar.classList.remove("open");
+      overlay.classList.remove("show");
+    });
+
+    // Toggle submenu do usuário
+    const userMenu = document.getElementById("userMenu");
+    const userSubmenu = document.getElementById("userSubmenu");
+    userMenu.addEventListener("click", () => {
+      userSubmenu.classList.toggle("hidden");
+    });
+
+    // Fechar submenu se clicar fora
+    document.addEventListener("click", (event) => {
+      if (!userMenu.contains(event.target)) {
+        userSubmenu.classList.add("hidden");
       }
     });
   </script>
