--- a/orcamento.html
+++ b/orcamento.html
@@ -10,12 +10,20 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
 </head>
-<body class="bg-white">
-  <div class="flex flex-col md:flex-row">
+<body class="bg-white min-h-screen flex flex-col">
+  <div class="flex flex-1">
+    <!-- Sidebar toggle button for small screens -->
+    <button id="sidebarToggle" class="md:hidden absolute top-4 left-4 z-50 p-2 rounded-md bg-blue-500 text-white focus:outline-none">
+      <svg class="h-6 w-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round">
+        <line x1="3" y1="12" x2="21" y2="12"></line>
+        <line x1="3" y1="6" x2="21" y2="6"></line>
+        <line x1="3" y1="18" x2="21" y2="18"></line>
+      </svg>
+    </button>
     <!-- Sidebar -->
-    <div id="sidebar" class="w-full md:w-1/6 bg-blue-500 p-4 flex flex-col">
+    <div id="sidebar" class="fixed inset-y-0 left-0 w-64 bg-blue-500 p-4 flex flex-col transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out z-40">
       <h2 class="text-white text-xl font-semibold mb-6 border-b border-blue-400 pb-2">Menu Principal</h2>
-      <nav class="flex flex-col space-y-3 flex-grow">
+      <nav class="flex flex-col space-y-3 flex-grow overflow-y-auto">
         <a href="paginaprincipal.html" class="bg-blue-400 hover:bg-blue-600 text-white py-2 rounded-md flex items-center px-3">
           <i class="fas fa-home text-lg mr-3"></i>
           <span>Tela Inicial</span>
@@ -65,7 +73,7 @@
     </div>
 
     <!-- Main Content -->
-    <div id="mainContent" class="w-full md:w-5/6 p-4">
+    <div id="mainContent" class="flex-1 p-4 md:ml-64">
       <div class="flex justify-between items-center mb-4">
         <div class="flex flex-col items-start">
           <img alt="Logo" class="h-10" src="logoprincipal.png"/>
@@ -121,6 +129,22 @@
       </form>
     </div>
   </div>
+  <script>
+    // Sidebar toggle script
+    const sidebarToggle = document.getElementById('sidebarToggle');
+    const sidebar = document.getElementById('sidebar');
+    const mainContent = document.getElementById('mainContent');
+
+    sidebarToggle.addEventListener('click', () => {
+      if (sidebar.classList.contains('-translate-x-full')) {
+        sidebar.classList.remove('-translate-x-full');
+        mainContent.classList.add('md:ml-64');
+      } else {
+        sidebar.classList.add('-translate-x-full');
+        mainContent.classList.remove('md:ml-64');
+      }
+    });
+  </script>
 
   <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-database-compat.js"></script>
@@ -372,3 +396,4 @@
   </script>
 </body>
 </html>
+
