--- a/ordemservico.html
+++ b/ordemservico.html
@@ -11,11 +11,79 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
 </head>
 <body class="bg-white">
+  <style>
+    /* Ensure the sidebar extends to the full height of the page */
+    html, body {
+      height: 100%;
+      margin: 0;
+    }
+    #sidebar {
+      min-height: 100vh;
+      position: fixed;
+      inset-y: 0;
+      left: 0;
+      width: 16rem; /* 64 */
+      background-color: #3b82f6; /* Tailwind blue-500 */
+      padding: 1rem;
+      display: flex;
+      flex-direction: column;
+      transform: translateX(-100%);
+      transition: transform 0.3s ease-in-out;
+      z-index: 40;
+    }
+    #sidebar.show {
+      transform: translateX(0);
+    }
+    /* Ensure the flex container fills the height */
+    body > div.flex {
+      min-height: 100vh;
+    }
+    /* Additional responsive tweaks */
+    @media (min-width: 768px) {
+      #sidebar {
+        transform: translateX(0);
+        position: fixed;
+      }
+      #mainContent {
+        margin-left: 16rem; /* 64 */
+      }
+    }
+    @media (max-width: 768px) {
+      #mainContent {
+        padding: 1rem !important;
+      }
+      #sidebar {
+        width: 16rem; /* 64 */
+      }
+    }
+    /* Sidebar toggle button styles */
+    #sidebarToggle {
+      display: block;
+      position: fixed;
+      top: 1rem;
+      left: 1rem;
+      z-index: 50;
+      padding: 0.5rem;
+      border-radius: 0.375rem;
+      background-color: #3b82f6; /* Tailwind blue-500 */
+      color: white;
+      border: none;
+    }
+  </style>
+
+  <button id="sidebarToggle" aria-label="Toggle sidebar" class="md:hidden absolute top-4 left-4 z-50 p-2 rounded-md bg-blue-500 text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-600">
+    <svg class="h-6 w-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round">
+      <line x1="3" y1="12" x2="21" y2="12"></line>
+      <line x1="3" y1="6" x2="21" y2="6"></line>
+      <line x1="3" y1="18" x2="21" y2="18"></line>
+    </svg>
+  </button>
+
   <div class="flex flex-col md:flex-row">
     <!-- Sidebar -->
-    <div id="sidebar" class="w-full md:w-1/6 bg-blue-500 p-4 flex flex-col">
+  <div id="sidebar" class="bg-blue-500 p-4 flex flex-col transition-transform duration-300 ease-in-out z-40">
       <h2 class="text-white text-xl font-semibold mb-6 border-b border-blue-400 pb-2">Menu Principal</h2>
-      <nav class="flex flex-col space-y-3 flex-grow">
+      <nav class="flex flex-col space-y-3 flex-grow overflow-y-auto">
         <a href="paginaprincipal.html" class="bg-blue-400 hover:bg-blue-600 text-white py-2 rounded-md flex items-center px-3">
           <i class="fas fa-home text-lg mr-3"></i>
           <span>Tela Inicial</span>
@@ -65,7 +133,7 @@
     </div>
 
     <!-- Main Content -->
-    <div id="mainContent" class="w-full md:w-5/6 p-4">
+    <div id="mainContent" class="flex-1 p-4 md:ml-64">
       <div class="flex justify-between items-center mb-4">
         <div class="flex flex-col items-start">
           <img alt="Logo" class="h-10" src="logoprincipal.png"/>
@@ -166,6 +234,22 @@
       </div>
     </div>
   </div>
+  <script>
+    // Sidebar toggle script
+    const sidebarToggle = document.getElementById('sidebarToggle');
+    const sidebar = document.getElementById('sidebar');
+    const mainContent = document.getElementById('mainContent');
+
+    sidebarToggle.addEventListener('click', () => {
+      if (sidebar.classList.contains('show')) {
+        sidebar.classList.remove('show');
+        mainContent.classList.remove('md:ml-64');
+      } else {
+        sidebar.classList.add('show');
+        mainContent.classList.add('md:ml-64');
+      }
+    });
+  </script>
 
   <script>
     function adjustSidebarHeight() {
