--- a/usuarios.html
+++ b/usuarios.html
@@ -87,11 +87,19 @@
 </head>
 <body class="bg-white min-h-screen flex flex-col">
   <audio id="notificationSound" src="notification.mp3" preload="auto"></audio>
+  <!-- Sidebar toggle button for small screens -->
+  <button id="sidebarToggle" aria-label="Toggle sidebar" class="md:hidden absolute top-4 left-4 z-50 p-2 rounded-md bg-blue-500 text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-600">
+    <svg class="h-6 w-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round">
+      <line x1="3" y1="12" x2="21" y2="12"></line>
+      <line x1="3" y1="6" x2="21" y2="6"></line>
+      <line x1="3" y1="18" x2="21" y2="18"></line>
+    </svg>
+  </button>
   <div class="flex flex-1 flex-col md:flex-row">
     <!-- Sidebar -->
-    <div id="sidebar" class="w-full md:w-1/6 bg-blue-500 p-4 flex flex-col">
+    <div id="sidebar" class="fixed inset-y-0 left-0 w-64 bg-blue-500 p-4 flex flex-col transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out z-40">
       <h2 class="text-white text-xl font-semibold mb-6 border-b border-blue-400 pb-2">Menu Principal</h2>
-      <nav class="flex flex-col space-y-3 flex-grow">
+      <nav class="flex flex-col space-y-3 flex-grow overflow-y-auto">
         <a href="paginaprincipal.html" class="bg-blue-400 hover:bg-blue-600 text-white py-2 rounded-md flex items-center px-3">
           <i class="fas fa-home text-lg mr-3"></i>
           <span>Tela Inicial</span>
@@ -139,7 +147,7 @@
         </a>
       </nav>
     </div>
-    <div class="flex-1 flex flex-col">
+    <div class="flex-1 flex flex-col md:ml-64">
       <!-- Header -->
       <nav class="header">
         <img src="logoprincipal.png" alt="Logo" class="logo"/>
@@ -156,7 +164,7 @@
       </nav>
       <!-- Main content area -->
       <main class="content">
-        <div id="imageContainer" class="content"></div>
+        <div id="imageContainer" class="content mx-auto max-w-7xl"></div>
         <!-- Floating button -->
         <div id="openModal" class="fixed bottom-4 right-4 bg-blue-500 text-white rounded-full w-16 h-16 flex items-center justify-center shadow-lg cursor-pointer">
           <i class="fas fa-plus text-2xl"></i>
@@ -384,7 +392,7 @@
           if (data) {
             Object.entries(data).forEach(([id, user]) => {
               const card = document.createElement('div');
-              card.className = 'bg-white rounded-lg shadow-md p-4 mb-4 flex flex-col justify-between w-1/3 min-h-[150px]';
+              card.className = 'bg-white rounded-lg shadow-md p-4 mb-4 flex flex-col justify-between w-full sm:w-1/2 lg:w-1/3 min-h-[150px]';
 
               const topSection = document.createElement('div');
               topSection.className = 'flex items-center space-x-4';
@@ -470,7 +478,13 @@
           });
         };
   </script>
+  <script>
+    // Toggle sidebar visibility on button click
+    document.getElementById('sidebarToggle').addEventListener('click', () => {
+      const sidebar = document.getElementById('sidebar');
+      sidebar.classList.toggle('-translate-x-full');
+    });
+  </script>
 </body>
 </html>
-
 
