--- a/saidaaparelho.html
+++ b/saidaaparelho.html
@@ -107,9 +107,9 @@
 
    <!-- Main Content -->
    <div class="flex-1 p-4 md:w-5/6 overflow-auto">
-    <div class="flex justify-between items-center mb-4 flex-wrap gap-3">
-      <img alt="Logo" class="h-10" src="logoprincipal.png"/>
-      <div class="flex items-center space-x-4">
+    <div class="flex items-center mb-4 flex-wrap gap-3 justify-center relative">
+      <img alt="Logo" class="h-10 mr-auto ml-auto" src="logoprincipal.png"/>
+      <div class="flex items-center space-x-4 absolute right-0">
         <i class="fas fa-bell text-blue-500 text-2xl"></i>
         <div id="userMenu" class="relative cursor-pointer">
           <i class="fas fa-user-circle text-blue-500 text-2xl"></i>
