--- a/historicodesaidas.html
+++ b/historicodesaidas.html
@@ -76,17 +76,20 @@
 
    <!-- Main Content -->
    <div id="mainContent" class="flex-1 p-4 overflow-auto md:ml-64">
-    <div class="flex justify-between items-center mb-4">
-     <img alt="Logo" class="h-10" src="logoprincipal.png"/>
-      <div class="flex items-center space-x-4">
-       <i class="fas fa-bell text-blue-500 text-2xl"></i>
-       <div id="userMenu" class="relative cursor-pointer">
-         <i class="fas fa-user-circle text-blue-500 text-2xl"></i>
-         <div id="userSubmenu" class="hidden absolute right-0 mt-2 w-48 bg-white border border-gray-300 rounded-md shadow-lg z-50">
-           <a href="usuarios.html" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Editar Perfil</a>
-           <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Chamar Suporte</a>
-         </div>
-       </div>
+    <div class="flex items-center mb-4 justify-center relative">
+      <button id="menuToggle" class="md:hidden text-blue-500 focus:outline-none absolute left-0">
+        <i class="fas fa-bars text-3xl"></i>
+      </button>
+      <img alt="Logo" class="h-10 mx-auto" src="logoprincipal.png"/>
+      <div class="relative flex items-center space-x-4 absolute right-0">
+        <i class="fas fa-bell text-blue-500 text-2xl"></i>
+        <div id="userMenu" class="relative cursor-pointer">
+          <i class="fas fa-user-circle text-blue-500 text-2xl"></i>
+          <div id="userSubmenu" class="hidden absolute right-0 mt-2 w-48 bg-white border border-gray-300 rounded-md shadow-lg z-50">
+            <a href="usuarios.html" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Editar Perfil</a>
+            <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Chamar Suporte</a>
+          </div>
+        </div>
       </div>
     </div>
     <div>
@@ -326,6 +329,5 @@
   </script>
  </body>
 </html>
-
 
 
