--- a/garantia.html
+++ b/garantia.html
@@ -74,7 +74,7 @@
       <!-- Main Content -->
       <div id="mainContent" class="flex-1 p-4 overflow-auto md:ml-64">
         <div class="flex justify-between items-center mb-4">
-          <div class="flex flex-col items-start">
+          <div class="flex flex-col items-center justify-center w-full">
             <img alt="Logo" class="h-10" src="logoprincipal.png"/>
           </div>
         <div class="flex items-center space-x-4">
@@ -626,4 +626,3 @@ DESSA GARANTIA.
   </script>
 </body>
 </html>
-
