--- a/estoque.html
+++ b/estoque.html
@@ -75,14 +75,16 @@
     </div>
 
     <!-- Conteúdo principal -->
-    <div id="mainContent" class="flex-1 p-4 overflow-auto md:ml-64">
-      <div class="flex justify-between items-center mb-4">
-        <img alt="Logo" class="h-10" src="logoprincipal.png"/>
-        <div class="flex items-center space-x-4">
-          <i class="fas fa-bell text-blue-500 text-2xl"></i>
-          <i class="fas fa-user-circle text-blue-500 text-2xl"></i>
+      <div id="mainContent" class="flex-1 p-4 overflow-auto md:ml-64">
+        <div class="flex justify-between items-center mb-4">
+          <div class="flex-1 flex justify-center">
+            <img alt="Logo" class="h-10" src="logoprincipal.png"/>
+          </div>
+          <div class="flex items-center space-x-4">
+            <i class="fas fa-bell text-blue-500 text-2xl"></i>
+            <i class="fas fa-user-circle text-blue-500 text-2xl"></i>
+          </div>
         </div>
-      </div>
 
       <!-- Search bar -->
       <div class="mb-4">
@@ -327,4 +329,3 @@
 </body>
 </html>
  
-
