--- a/dadosempresa.html
+++ b/dadosempresa.html
@@ -101,19 +101,13 @@
     <!-- Main Content -->
     <div id="mainContent" class="flex-1 p-4 md:ml-64">
       <div class="flex justify-between items-center mb-4">
-        <div class="flex flex-col items-start">
-          <img alt="Logo" class="h-10" src="logoprincipal.png"/>
-        </div>
-      <div class="flex items-center space-x-4">
+        <div style="width: 64px;"></div>
+        <img alt="Logo" class="h-10" src="logoprincipal.png"/>
+        <div class="flex items-center space-x-4">
           <i class="fas fa-bell text-blue-500 text-2xl"></i>
-          <div id="userMenu" class="relative cursor-pointer">
-            <i class="fas fa-user-circle text-blue-500 text-2xl"></i>
-            <div id="userSubmenu" class="hidden absolute right-0 mt-2 w-48 bg-white border border-gray-300 rounded-md shadow-lg z-50">
-              <a href="usuarios.html" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Editar Perfil</a>
-              <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Chamar Suporte</a>
+          <i class="fas fa-user-circle text-blue-500 text-2xl"></i>
+        </div>
       </div>
-    </div>
-  </div>
 
   <script>
     // Sidebar toggle script
