--- a/andamento.html
+++ b/andamento.html
@@ -75,6 +75,7 @@
     <!-- Main Content -->
     <div id="mainContent" class="flex-1 p-4 md:ml-64">
       <div class="flex justify-between items-center mb-4">
+        <div style="width: 64px;"></div>
         <img alt="Logo" class="h-10" src="logoprincipal.png"/>
         <div class="relative flex items-center space-x-4">
           <i class="fas fa-bell text-blue-500 text-2xl"></i>
