--- a/dadosempresa.html
+++ b/dadosempresa.html
@@ -38,16 +38,17 @@
 </head>
 <body class="bg-white">
   <div class="flex flex-col md:flex-row">
-    <!-- Sidebar toggle button for small screens -->
-    <button id="sidebarToggle" aria-label="Toggle sidebar" class="md:hidden absolute top-4 left-4 z-50 p-2 rounded-md bg-blue-500 text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-600">
-      <svg class="h-6 w-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round">
-        <line x1="3" y1="12" x2="21" y2="12"></line>
-        <line x1="3" y1="6" x2="21" y2="6"></line>
-        <line x1="3" y1="18" x2="21" y2="18"></line>
-      </svg>
-    </button>
-    <!-- Sidebar -->
-    <div id="sidebar" class="fixed inset-y-0 left-0 w-64 bg-blue-500 p-4 flex flex-col transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out z-40">
+  <!-- Sidebar toggle button for small screens -->
+  <button id="sidebarToggle" class="md:hidden absolute top-4 left-4 z-50 p-2 rounded-md bg-blue-500 text-white focus:outline-none">
+    <svg class="h-6 w-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round">
+      <line x1="3" y1="12" x2="21" y2="12"></line>
+      <line x1="3" y1="6" x2="21" y2="6"></line>
+      <line x1="3" y1="18" x2="21" y2="18"></line>
+    </svg>
+  </button>
+  <div class="flex flex-1 min-h-screen">
+   <!-- Sidebar -->
+   <div id="sidebar" class="fixed inset-y-0 left-0 w-64 bg-blue-500 p-4 flex flex-col transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out z-40">
       <h2 class="text-white text-xl font-semibold mb-6 border-b border-blue-400 pb-2">Menu Principal</h2>
       <nav class="flex flex-col space-y-3 flex-grow overflow-y-auto">
         <a href="paginaprincipal.html" class="bg-blue-400 hover:bg-blue-600 text-white py-2 rounded-md flex items-center px-3">
@@ -86,6 +87,11 @@
           <i class="fas fa-cog text-lg mr-3"></i>
           <span>Estoque de peças</span>
         </a>
+        <!-- Nova opção de Fluxo de Caixa -->
+        <a href="fluxocaixa.html" class="bg-blue-400 hover:bg-blue-600 text-white py-2 rounded-md flex items-center px-3">
+          <i class="fas fa-cash-register text-lg mr-3"></i>
+          <span>Fluxo de Caixa</span>
+        </a>
         <div class="border-t border-blue-400 my-4"></div>
         <a href="historicodesaidas.html" class="bg-blue-400 hover:bg-blue-600 text-white py-2 rounded-md flex items-center px-3">
           <i class="fas fa-history text-lg mr-3"></i>
@@ -98,16 +104,24 @@
       </nav>
     </div>
 
-    <!-- Main Content -->
-    <div id="mainContent" class="flex-1 p-4 md:ml-64">
-      <div class="flex justify-between items-center mb-4">
-        <div style="width: 64px;"></div>
-        <img alt="Logo" class="h-10" src="logoprincipal.png"/>
-        <div class="flex items-center space-x-4">
-          <i class="fas fa-bell text-blue-500 text-2xl"></i>
+   <!-- Main Content -->
+   <div id="mainContent" class="flex-1 p-4 overflow-auto md:ml-64">
+    <div class="flex items-center mb-4 justify-center relative">
+      <button id="menuToggle" class="md:hidden text-blue-500 focus:outline-none absolute left-0">
+        <i class="fas fa-bars text-3xl"></i>
+      </button>
+      <img alt="Logo" class="h-10 mx-auto" src="logoprincipal.png"/>
+      <div class="relative flex items-center space-x-4 absolute right-0">
+        <i class="fas fa-bell text-blue-500 text-2xl"></i>
+        <div id="userMenu" class="relative cursor-pointer">
           <i class="fas fa-user-circle text-blue-500 text-2xl"></i>
+          <div id="userSubmenu" class="hidden absolute right-0 mt-2 w-48 bg-white border border-gray-300 rounded-md shadow-lg z-50">
+            <a href="usuarios.html" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Editar Perfil</a>
+            <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Chamar Suporte</a>
+          </div>
         </div>
       </div>
+    </div>
 
   <script>
     // Sidebar toggle script
@@ -262,4 +276,3 @@
   </script>
 </body>
 </html>
-
