--- a/ordemservico.html
+++ b/ordemservico.html
@@ -81,7 +81,7 @@
 
   <div class="flex flex-col md:flex-row">
     <!-- Sidebar -->
-  <div id="sidebar" class="bg-blue-500 p-4 flex flex-col transition-transform duration-300 ease-in-out z-40">
+   <div id="sidebar" class="fixed inset-y-0 left-0 w-64 bg-blue-500 p-4 flex flex-col transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out z-40">
       <h2 class="text-white text-xl font-semibold mb-6 border-b border-blue-400 pb-2">Menu Principal</h2>
       <nav class="flex flex-col space-y-3 flex-grow overflow-y-auto">
         <a href="paginaprincipal.html" class="bg-blue-400 hover:bg-blue-600 text-white py-2 rounded-md flex items-center px-3">
@@ -119,6 +119,11 @@
         <a href="estoque.html" class="bg-blue-400 hover:bg-blue-600 text-white py-2 rounded-md flex items-center px-3">
           <i class="fas fa-cog text-lg mr-3"></i>
           <span>Estoque de peças</span>
+        </a>
+        <!-- Nova opção de Fluxo de Caixa -->
+        <a href="fluxocaixa.html" class="bg-blue-400 hover:bg-blue-600 text-white py-2 rounded-md flex items-center px-3">
+          <i class="fas fa-cash-register text-lg mr-3"></i>
+          <span>Fluxo de Caixa</span>
         </a>
         <div class="border-t border-blue-400 my-4"></div>
         <a href="historicodesaidas.html" class="bg-blue-400 hover:bg-blue-600 text-white py-2 rounded-md flex items-center px-3">
@@ -235,18 +240,17 @@
     </div>
   </div>
   <script>
-    // Sidebar toggle script
     const sidebarToggle = document.getElementById('sidebarToggle');
     const sidebar = document.getElementById('sidebar');
     const mainContent = document.getElementById('mainContent');
 
     sidebarToggle.addEventListener('click', () => {
-      if (sidebar.classList.contains('show')) {
-        sidebar.classList.remove('show');
-        mainContent.classList.remove('md:ml-64');
-      } else {
-        sidebar.classList.add('show');
+      if (sidebar.classList.contains('-translate-x-full')) {
+        sidebar.classList.remove('-translate-x-full');
         mainContent.classList.add('md:ml-64');
+      } else {
+        sidebar.classList.add('-translate-x-full');
+        mainContent.classList.remove('md:ml-64');
       }
     });
   </script>
